@@ -1,7 +1,9 @@
 # $Id$
 # Makefile example
 
-PACKAGE=@PACKAGE@
+PACKAGE=	@PACKAGE@
+VERSION=	@VERSION@
+FULL_NAME=	@FULL_NAME@
 
 CFLAGS=	@CFLAGS@
 LIBS=	@LIBS@
